corrected visibility

--- a/web-browser-game-project/styles.css
+++ b/web-browser-game-project/styles.css
@@ -116,9 +116,9 @@ button:hover {
 }
 
 .visible {
-    display: visible;
+    visibility: visible;
 }
 
 .hidden {
-    display: hidden;
+    visibility: hidden;
 }
